--- a/basics-assignment-1-start/angular.json
+++ b/basics-assignment-1-start/angular.json
@@ -119,5 +119,8 @@
       }
     }
   },
-  "defaultProject": "my-first-app"
+  "defaultProject": "my-first-app",
+  "cli": {
+    "analytics": "022917f0-e5fc-44b6-b84c-f460328d2cb6"
+  }
 }
